@@ -85,4 +85,30 @@ key3=value3";
         // assert
         Assert.AreEqual(expectedResult, result);
     }
+
+    [TestMethod]
+    public async Task RequestBodyVariableHandler_Parse_RegexNoResultFound_HappyFlow()
+    {
+        // arrange
+        const string input = "Posted content: ((request_body:'key4=([a-z0-9]*)'))";
+        const string body = @"key1=value1
+key2=value2
+key3=value3";
+
+        const string expectedResult = "Posted content: ";
+
+        var httpContextServiceMock = _mocker.GetMock<IHttpContextService>();
+        var handler = _mocker.CreateInstance<RequestBodyResponseVariableParsingHandler>();
+
+        httpContextServiceMock
+            .Setup(m => m.GetBodyAsync(It.IsAny<CancellationToken>()))
+            .ReturnsAsync(body);
+
+        // act
+        var matches = ResponseVariableParser.VarRegex.Matches(input);
+        var result = await handler.ParseAsync(input, matches, new StubModel(), CancellationToken.None);
+
+        // assert
+        Assert.AreEqual(expectedResult, result);
+    }
 }
