@@ -1,1 +1,1 @@
-The display URL body parser makes it possible to write the complete URL to the response.
+The display URL body parser makes it possible to write the complete URL to the response. You can also use a regular expression to insert a part of the display URL in the response body.
