@@ -4511,6 +4511,33 @@
 									"response": []
 								},
 								{
+									"name": "[Create stub] Display URL with regex",
+									"request": {
+										"method": "POST",
+										"header": [
+											{
+												"key": "Content-Type",
+												"type": "text",
+												"value": "text/yaml"
+											}
+										],
+										"body": {
+											"mode": "raw",
+											"raw": "id: dynamic-display-url-regex-example\nconditions:\n  method: GET\n  url:\n    path:\n      equals: /dynamic-display-url-regex/users/123/orders\nresponse:\n  enableDynamicMode: true\n  text: \"User ID: ((display_url:'\\/users\\/([0-9]{3})\\/orders'))\"\n  headers:\n    X-Header: \"((display_url:'\\/users\\/([0-9]{3})\\/orders'))\"\npriority: 0"
+										},
+										"url": {
+											"raw": "{{rootUrl}}ph-api/stubs",
+											"host": [
+												"{{rootUrl}}ph-api"
+											],
+											"path": [
+												"stubs"
+											]
+										}
+									},
+									"response": []
+								},
+								{
 									"name": "[Create stub] Root URL",
 									"request": {
 										"method": "POST",
@@ -5130,6 +5157,59 @@
 												{
 													"key": "q2",
 													"value": "var2"
+												}
+											]
+										}
+									},
+									"response": []
+								},
+								{
+									"name": "Test display URL with regex",
+									"event": [
+										{
+											"listen": "test",
+											"script": {
+												"exec": [
+													"pm.test(\"Body is correct\", function () {",
+													"    pm.response.to.have.body(\"User ID: 123\");",
+													"});",
+													"",
+													"pm.test(\"Header is correct\", function () {",
+													"    pm.expect(pm.response.headers.get('X-Header')).is.eq(\"123\");",
+													"});"
+												],
+												"type": "text/javascript"
+											}
+										}
+									],
+									"request": {
+										"method": "GET",
+										"header": [
+											{
+												"key": "X-Header-1",
+												"type": "text",
+												"value": "val1"
+											},
+											{
+												"key": "X-Header-2",
+												"type": "text",
+												"value": "val2"
+											}
+										],
+										"url": {
+											"raw": "{{rootUrl}}dynamic-display-url-regex/users/123/orders?key=val",
+											"host": [
+												"{{rootUrl}}dynamic-display-url-regex"
+											],
+											"path": [
+												"users",
+												"123",
+												"orders"
+											],
+											"query": [
+												{
+													"key": "key",
+													"value": "val"
 												}
 											]
 										}
